force-app/main/default/objects/Follow_Fail__c/Follow_Fail__c.object-meta.xml
<CustomObject>
    <label>Follow Fail</label>
    <nameField>
        <displayFormat>FF-{0000}</displayFormat>
        <label>Follow Fail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Follow Fails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>