force-app/main/default/objects/Follow_Fail__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Follow Fails</relationshipLabel>
    <relationshipName>Follow_Fails</relationshipName>
    <type>Lookup</type>
</CustomField>