force-app/main/default/objects/Follow_Fail__c/fields/After_Sale__c.field-meta.xml
<CustomField>
    <fullName>After_Sale__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>After Sale</label>
    <referenceTo>Order_Account__c</referenceTo>
    <relationshipLabel>Follow Fails</relationshipLabel>
    <relationshipName>Follow_Fails</relationshipName>
    <type>Lookup</type>
</CustomField>