force-app/main/default/objects/Follow_Fail__c/fields/Consultant__c.field-meta.xml
<CustomField>
    <fullName>Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consultant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Follow_Fails</relationshipName>
    <type>Lookup</type>
</CustomField>