force-app/main/default/objects/Follow_Fail__c/fields/Customer_response__c.field-meta.xml
<CustomField>
    <fullName>Customer_response__c</fullName>
    <label>Customer response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buy a new bike</fullName>
            </value>
            <value>
                <fullName>Continue to buy</fullName>
            </value>
            <value>
                <fullName>Stop buying</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>