force-app/main/default/objects/Follow_Fail__c/fields/Fail_Number__c.field-meta.xml
<CustomField>
    <fullName>Fail_Number__c</fullName>
    <label>Fail Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>