force-app/main/default/objects/Follow_Fail__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Follow Fails</relationshipLabel>
    <relationshipName>Follow_Fails</relationshipName>
    <type>Lookup</type>
</CustomField>