force-app/main/default/objects/Follow_Fail__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <formula>IF( ISBLANK( Lead__c ) , Account__r.PersonContact.MobilePhone,  Lead__r.MobilePhone )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile</label>
    <type>Text</type>
</CustomField>