force-app/main/default/objects/Follow_Fail__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Follow Fails</relationshipLabel>
    <relationshipName>Follow_Fails</relationshipName>
    <type>Lookup</type>
</CustomField>