force-app/main/default/objects/Follow_Fail__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Follow Fails</relationshipLabel>
    <relationshipName>Follow_Fails</relationshipName>
    <type>Lookup</type>
</CustomField>