force-app/main/default/objects/Follow_Fail__c/recordTypes/After_Sale.recordType-meta.xml
<RecordType>
    <fullName>After_Sale</fullName>
    <active>true</active>
    <label>After Sale</label>
</RecordType>