force-app/main/default/objects/Follow_Fail__c/recordTypes/Follow_Fail_Account.recordType-meta.xml
<RecordType>
    <fullName>Follow_Fail_Account</fullName>
    <active>true</active>
    <label>Follow Fail Account</label>
</RecordType>