force-app/main/default/objects/Follow_Fail__c/recordTypes/Follow_Fail_Lead.recordType-meta.xml
<RecordType>
    <fullName>Follow_Fail_Lead</fullName>
    <active>true</active>
    <label>Follow Fail Lead</label>
</RecordType>