force-app/main/default/objects/Follow_Fail__c/recordTypes/Follow_Fail_Order.recordType-meta.xml
<RecordType>
    <fullName>Follow_Fail_Order</fullName>
    <active>true</active>
    <label>Follow Fail Order</label>
</RecordType>