force-app/main/default/objects/Follow_Fail__c/listViews/ALL_HN.listView-meta.xml
<ListView>
    <fullName>ALL_HN</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Order__c</columns>
    <columns>After_Sale__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Consultant__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Consultant__c</field>
        <operation>equals</operation>
        <value>Vũ Đình Chính,Ngô Thế Nam,Lê Ngọc Chiến</value>
    </filters>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>Nguyễn Tuấn Nghĩa</value>
    </filters>
    <label>Follow Fail Bike HN</label>
    <sharedTo>
        <group>Sale_Sup_DO_HN</group>
    </sharedTo>
</ListView>