force-app/main/default/objects/Follow_Fail__c/listViews/Service_Team_HCM_Follow_Fail.listView-meta.xml
<ListView>
    <fullName>Service_Team_HCM_Follow_Fail</fullName>
    <filterScope>Queue</filterScope>
    <label>Service Team HCM</label>
    <queue>Service_Team_HCM</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>